<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backdrop"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_calendar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:background="@drawable/activity_main_panel"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/layout_calendar_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button_decMonth"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:text="@string/calendar_button_decMonth" />

            <TextView
                android:id="@+id/textView_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1.25"
                android:background="@drawable/activity_main_panel"
                android:gravity="center"
                android:shadowColor="#000000"
                android:shadowDx="2"
                android:shadowDy="2"
                android:text="&lt;title>"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:typeface="normal" />

            <Button
                android:id="@+id/button_incMonth"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:text="@string/calendar_button_incMonth" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_calendar_body"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal"
            android:background="@drawable/activity_main_panel" >

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:onClick="button_back_onClick"
        android:text="@string/calendar_button_back" />

</LinearLayout>
